// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create project chain 1`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <!--0-->
    <li></li>
  </ul>
  <!--0-->
  <!--0-->
  <!--0-->
  <!--0-->
  <!--1-->
  <!--0-->
</main>
<footer> Sham 2018
  (v 0.0.11) </footer>
<!--1-->"
`;

exports[`create project chain 2`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <li>
      <a href=\\"projects/1\\">Test</a>
    </li>
    <!--0-->
    <!--0-->
    <li>Create project chain</li>
  </ul>
  <!--0-->
  <!--0-->
  <!--0-->
  <!--0-->
  <div class=\\"project-chain-form\\">
    <form>
      <div class=\\"group\\">
        <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Name</label>
      </div>
      <div class=\\"group\\">
        <textarea wrap=\\"off\\" style=\\"display: none\\" name=\\"command\\"></textarea>
        <div class=\\"code-flask\\">
          <div class=\\"codeflask codeflask--has-line-numbers\\">
            <textarea class=\\"codeflask__textarea codeflask__flatten\\" spellcheck=\\"false\\" autocapitalize=\\"off\\" autocomplete=\\"off\\" autocorrect=\\"off\\"></textarea><pre class=\\"codeflask__pre codeflask__flatten  language-html\\"><code class=\\"codeflask__code  language-html\\"></code></pre>
            <div class=\\"codeflask__lines\\"><span class=\\"codeflask__lines__line\\">1</span></div>
          </div>
        </div>
        <!--0--><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Command</label>
      </div>
      <div class=\\"group\\">
        <button type=\\"submit\\"><span>Create</span></button>
      </div>
    </form>
  </div>
  <!--1-->
  <!--0-->
  <!--1-->
  <!--0-->
</main>
<footer> Sham 2018
  (v 0.0.11) </footer>
<!--1-->"
`;

exports[`create project chain 3`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <!--0-->
    <li>Test</li>
  </ul>
  <!--0-->
  <!--0-->
  <!--0-->
  <!--0-->
  <div class=\\"project-info\\">
    <h3>Test</h3>
    <dl>
      <dt>/tmp/</dt>
      <dd>Current work directory.</dd>
      <dd>This directory will be used when running tasks.</dd>
      <dt>
        <a href=\\"projects/1/edit\\"> Edit </a>
      </dt>
      <dd>Edit project name &amp; cwd</dd>
      <dt>
        <a class=\\"project-delete-link\\" href=\\"projects/1/delete\\"> Delete </a>
      </dt>
      <dd>Delete project</dd>
    </dl>
  </div>
  <div class=\\"project-chains\\">
    <h3>Chains</h3>
    <button class=\\"project-chain\\">Test chain</button>
    <!--0-->
    <!--0-->
    <!--0-->
    <a class=\\"project-chain project-chain-create\\" href=\\"projects/1/chains/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--0-->
  <!--1-->
  <!--0-->
  <!--1-->
  <!--0-->
</main>
<footer> Sham 2018
  (v 0.0.11) </footer>
<!--1-->"
`;
